feat: add contextual topic index [skip ci]
